components/layout/header.module.scss
@use "sass:color";
@use "../../styles/base";

.header {
  @include base.container;
  padding-top: 1rem;
  margin-bottom: 40px;

  @include base.phone {
    background-color: rgb(255, 255, 255, 0);
    box-shadow: 5px 5px 20px color.change(base.$green-200, $alpha: 0);
    transition: all 0.2s ease-in-out;
    position: relative;
  }

  &_home {
    @extend .header;
    padding-bottom: 0;
  }

  &_open {
    @extend .header;
    @include base.phone {
      box-shadow: 5px 5px 20px base.$green-200;
      background-color: rgb(255, 255, 255);
      z-index: 10;
    }
  }

  .nav {
    display: grid;
    grid-template:
      "button home links" auto
      / auto auto auto;
    justify-content: start;

    @include base.phone {
      grid-template:
        "button home" auto
        "links links" auto
        / fit-content(2.2rem) auto;
      justify-content: stretch;
      justify-items: stretch;
      min-width: 0;
    }

    .button {
      background-color: inherit;
      grid-area: button;
      border: none;
      font-size: 2rem;
      color: base.$green-700;
      cursor: pointer;
      transition: margin-right 0.2s ease-in-out, width 0.2s ease-in-out;
      margin-right: 0;
      width: 0;
      padding: 0;
      overflow: hidden;

      @include base.phone {
        margin-right: 20px;
        width: 2rem;
        padding: 0;
      }

      &_home {
        @extend .button;

        @include base.phone {
          margin-right: 0;
          min-width: 0;
          width: 0;
          padding: 0;
        }
      }
    }

    .home {
      grid-area: home;
      align-self: center;
      @include base.serif;
      color: base.$green-700;
      font-size: 2.4rem;
      font-weight: 800;
      font-style: italic;
      letter-spacing: 0.3rem;
      text-decoration: none;
      margin-right: 40px;
      transition: all 0.2s ease-in-out;

      @include base.phone {
        margin-right: 0;
        justify-self: start;
      }

      &_home {
        @extend .home;
        color: base.$green-100;
        font-size: 3.6rem;

        @include base.phone {
          font-size: 2.4rem;
        }
      }
    }

    .links {
      grid-area: links;
      align-self: last baseline;
      display: flex;
      flex-direction: row;
      align-items: flex-end;
      gap: 20px;
      transition: all 0.2s ease-in-out;
      width: auto;
      max-width: 350px;
      white-space: nowrap;

      @include base.phone {
        padding: 0;
        gap: 30px;
        flex-direction: column;
        justify-self: center;
        align-items: center;
        opacity: 0;
        max-height: 0;
      }

      &_home {
        @extend .links;
        max-width: 0;
        opacity: 0;
      }

      &_open {
        @extend .links;
        @include base.phone {
          padding: 20px 0 20px;
          height: auto;
          opacity: 1;
          max-height: 200px;
        }
      }

      .social {
        display: flex;
        flex-direction: row;
        gap: 20px;
        margin-left: 10px;

        @include base.phone {
          margin-left: 0;
          gap: 30px;
        }
      }

      a {
        @include base.sans;
        color: base.$green-800;
        text-decoration: none;
        font-size: 1.8rem;
        transition: color 0.2s ease-in-out;

        &:hover {
          color: base.$green-600;
        }
      }

      hr {
        display: none;
      }
    }
  }
}

